--- a/Ireland2022/Ireland2022.csproj
+++ b/Ireland2022/Ireland2022.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Screens\CurrencyPage.xaml">
+    <EmbeddedResource Update="Screens\SleepPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
