Finished App Sleep and Flight Functions, Added Universial Update Button, Added App Icon, App now ready for Full Scale Play Store Release

--- a/Ireland2022.Android/Ireland2022.Android.csproj
+++ b/Ireland2022.Android/Ireland2022.Android.csproj
@@ -88,13 +88,28 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ire2022.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ireland2022\Ireland2022.csproj">
       <Project>{EFE698C4-8EEE-4F12-9718-C51C56194386}</Project>
       <Name>Ireland2022</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\IrelandLoadIcon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-mdpi\ire2022.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xhdpi\ire2022.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ire2022.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ire2022.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
