--- a/Ireland2022.Android/Properties/AndroidManifest.xml
+++ b/Ireland2022.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.2D" package="com.companyname.ireland2022" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.3D" package="com.companyname.ireland2022" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-	<application android:label="Ireland2022.Android" android:theme="@style/MainTheme"></application>
+	<application android:label="Ireland2022.Android" android:theme="@style/MainTheme" android:icon="@mipmap/ire2022"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.BATTERY_STATS" />
 </manifest>
